# ai-agent-firewall

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: __init__.py  demo_agent.py
app/firewall/: __init__.py  heuristics.py  llm_judge.py  models.py  pipeline.py
docs/: PROJECT_DOCUMENTATION.md
scripts/: evaluate.py
tests/: attacks.py  benign.py  test_pipeline.py
